<resources>
    <string name="app_name">Grocery Online</string>
    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="addresserror">This field is required</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="passworderror">The password must contain at least 6 character containing, at least one uppercase letter and one number</string>
    <string name="err_password_confirmation">The password must match with password field</string>

    <string name="search_your_recipes">Search Your Recipes…</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="dot_loading">...</string>
    <string name="quantity">Available</string>
    <string name="buy">Buy it now</string>
    <string name="cart">Add to Cart</string>
    <string name="favorite">Favorite</string>

    <string name="noConnectionError">No internet connection</string>
    <string name="timeoutError">Very slow internet connection</string>
    <string name="authFailureError">An expired login session</string>
    <string name="authFailureErrorLogin">Invalid email or password!</string>
    <string name="serverError">Server is down or is unable to process the request</string>
    <string name="networkError">nNtwork error while performing the request</string>
    <string name="parseError">Client not able to parse(read) the response</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">FOODS</string>
    <string name="menu_gallery">ORDERS</string>
    <string name="menu_slideshow">CART</string>
    <string name="menu_tools">SHOPS</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">LOGOUT</string>
</resources>
