<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/ordersActivity"
            android:icon="@drawable/ic_autorenew_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/cartActivity"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_slideshow" />
    </group>


    <item android:title="Profile">
        <menu>
            <item
                android:id="@+id/shops"
                android:icon="@drawable/ic_store_black_24dp"
                android:title="@string/menu_tools" />
            <item
                android:id="@+id/nav_user"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_login"
                android:visible="false"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="LOGIN" />
            <item
                android:id="@+id/nav_logout"
                android:visible="false"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_send" />
        </menu>
    </item>

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_call"
                android:icon="@drawable/ic_phone_forwarded_black_24dp"
                android:title="Call us" />
            <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_phone_forwarded_black_24dp"
            android:title="Call us" />
        </menu>
    </item>
</menu>
